--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,118 +6,52 @@ on:
   workflow_dispatch:
 
 jobs:
-  # Job 1: Gerar JSONs na branch main
-  generate-json:
+  update-json-data:
+    name: Gerar e Atualizar Branch Data
     runs-on: ubuntu-latest
+
     steps:
-      - name: Clonar repositório
+      - name: Checkout do branch `data`
         uses: actions/checkout@v4
-        
+        with:
+          ref: data
+          fetch-depth: 1   # Shallow clone para acelerar
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Configurar caching do pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+
       - name: Configurar Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
-          
+          python-version: '3.10'
+
       - name: Instalar dependências
         run: pip install -r requirements.txt
-        
-      - name: Executar script para atualizar JSON
+
+      - name: Executar script de atualização de JSON
         run: |
           export PYTHONPATH=$(pwd)
           python scripts/RSS_API.py
 
-      - name: Gerar date_test.json
+      - name: Copiar JSONs para diretórios finais
         run: |
-          python - << 'EOF'
-          import json
-
-          # load the freshly generated JSON
-          with open('articles/articles.json', encoding='utf-8') as f:
-              data = json.load(f)
-
-          # write a brand‑new JSON from scratch
-          with open('articles/date_test.json', 'w', encoding='utf-8') as f:
-              json.dump(data, f, ensure_ascii=False, indent=2)
-          EOF
-        
-      - name: Copiar ficheiros JSON para pasta public
-        run: |
-          cp articles/articles.json public/articles.json
-          cp articles/articles_priority.json public/articles_priority.json
-          cp articles/articles_secondary.json public/articles_secondary.json
-          
-      - name: Upload dos ficheiros JSON
-        uses: actions/upload-artifact@v4
-        with:
-          name: json-files
-          path: |
-            articles/articles.json
-            articles/articles_priority.json
-            articles/articles_secondary.json
-            articles/original_categories.json
-            public/articles.json
-            public/articles_priority.json
-            public/articles_secondary.json
-            # incluir também o ficheiro de teste
-            articles/date_test.json
-
-  # Job 2: Atualizar branch data
-  update-data-branch:
-    runs-on: ubuntu-latest
-    needs: generate-json
-    steps:
-      - name: Clonar repositório
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
-        
-      - name: Configurar Git
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          
-      - name: Configurar branch data
-        run: |
-          # Verificar se branch data existe
-          if git ls-remote --heads origin data | grep -q data; then
-            git fetch origin data
-            git checkout data
-          else
-            git checkout --orphan data
-          fi
-
-          # Limpar estrutura anterior
-          find . -maxdepth 1 -type f ! -name '.gitignore' -delete || true
-          rm -rf articles public json-temp || true
-          mkdir -p articles public json-temp
-
-      - name: Download dos ficheiros JSON
-        uses: actions/download-artifact@v4
-        with:
-          name: json-files
-          path: json-temp/
-          
-      - name: Copiar ficheiros JSON para estrutura limpa
-        run: |
-          cp json-temp/articles/articles.json articles/
-          cp json-temp/articles/articles_priority.json articles/
-          cp json-temp/articles/articles_secondary.json articles/
-          cp json-temp/articles/original_categories.json articles/
-          cp json-temp/public/articles.json public/
-          cp json-temp/public/articles_priority.json public/
-          cp json-temp/public/articles_secondary.json public/
-          
+          cp articles/*.json public/ || true
           # Criar README
           echo "# Branch Data - Ficheiros JSON" > README.md
-          echo "Atualizado automaticamente em: $(date)" >> README.md
+          echo "Atualizado automaticamente em: $(date '+%Y-%m-%d %H:%M:%S')" >> README.md
 
-      - name: Commit e Push para branch data
+      - name: Commit e Push para branch `data`
         run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           if ! git diff --cached --quiet; then
             git commit -m "Atualização automática dos ficheiros JSON - $(date '+%Y-%m-%d %H:%M:%S')"
             git push origin data
           else
             echo "Nenhuma mudança para commitar"
-          fi  
+          fi
