--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,3 +83,7 @@ jobs:
           else
             echo "Nenhuma mudança para commitar"
           fi
+
+      - name: Trigger Vercel Deploy
+        run: |
+          curl -X POST "${{ secrets.VERCEL_DEPLOY_HOOK }}"
