--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,49 +56,32 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Remover ficheiro corrompido
+      - name: Limpar ficheiros corrompidos (se existirem)
         run: |
-          # Remover ficheiro de teste anterior
-          rm -f articles/original_categories.json
-          echo "Ficheiro original_categories.json removido - será recriado pelo script"    
+          # Verificar e limpar ficheiros com formato incorreto
+          if [ -f "articles/original_categories.json" ]; then
+            if ! python -c "
+            import json
+            try:
+                with open('articles/original_categories.json', 'r') as f:
+                    data = json.load(f)
+                # Verificar se é um array
+                if not isinstance(data, list):
+                    exit(1)
+            except:
+                exit(1)
+            " 2>/dev/null; then
+                echo "Removendo ficheiro original_categories.json com formato incorreto"
+                rm -f articles/original_categories.json
+            else
+                echo "Ficheiro original_categories.json tem formato correto - mantendo"
+            fi
+          else
+            echo "Ficheiro original_categories.json não existe - será criado pelo script"
+          fi
 
       - name: Instalar dependências
         run: pip install -r temp-scripts/requirements.txt
-
-      - name: Debug - Verificar caminhos no Python
-        run: |
-          export PYTHONPATH=$(pwd)/temp-scripts
-          python -c "
-          import os
-          print('=== Current working directory ===')
-          print(os.getcwd())
-          print('=== Articles directory exists? ===')
-          print(os.path.exists('articles'))
-          print('=== original_categories.json exists? ===')
-          print(os.path.exists('articles/original_categories.json'))
-          print('=== Files in articles directory ===')
-          if os.path.exists('articles'):
-              print(os.listdir('articles'))
-          else:
-              print('Articles directory does not exist')
-          "
-
-      - name: Debug - Verificar conteúdo do ficheiro
-        run: |
-          echo "=== Conteúdo do original_categories.json ==="
-          cat articles/original_categories.json
-          echo ""
-          echo "=== Verificar se é JSON válido ==="
-          python -c "
-          import json
-          with open('articles/original_categories.json', 'r') as f:
-              data = json.load(f)
-              print('Type of data:', type(data))
-              print('Data content:', data)
-              if isinstance(data, list) and len(data) > 0:
-                  print('First entry type:', type(data[0]))
-                  print('First entry:', data[0])
-          "      
 
       - name: Executar script de atualização de JSON
         run: |
