--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,16 +61,16 @@ jobs:
           # Verificar e limpar ficheiros com formato incorreto
           if [ -f "articles/original_categories.json" ]; then
             if ! python -c "
-            import json
-            try:
-                with open('articles/original_categories.json', 'r') as f:
-                    data = json.load(f)
-                # Verificar se é um array
-                if not isinstance(data, list):
-                    exit(1)
-            except:
-                exit(1)
-            " 2>/dev/null; then
+import json
+try:
+    with open('articles/original_categories.json', 'r') as f:
+        data = json.load(f)
+    # Verificar se é um array
+    if not isinstance(data, list):
+        exit(1)
+except:
+    exit(1)
+" 2>/dev/null; then
                 echo "Removendo ficheiro original_categories.json com formato incorreto"
                 rm -f articles/original_categories.json
             else
@@ -83,6 +83,28 @@ jobs:
       - name: Instalar dependências
         run: pip install -r temp-scripts/requirements.txt
 
+      - name: Verificar ficheiros JSON existentes antes do script
+        run: |
+          echo "=== Estado dos ficheiros JSON ANTES do script ==="
+          ls -la articles/
+          if [ -f "articles/original_categories.json" ]; then
+            echo "=== original_categories.json existe - tamanho e formato ==="
+            wc -l articles/original_categories.json
+            python -c "
+import json
+try:
+    with open('articles/original_categories.json', 'r') as f:
+        data = json.load(f)
+    print(f'Ficheiro válido com {len(data)} entradas')
+    if len(data) > 0:
+        print(f'Primeira entrada: {data[0]}')
+except Exception as e:
+    print(f'Erro ao ler ficheiro: {e}')
+"
+          else
+            echo "original_categories.json NÃO existe - será criado pelo script"
+          fi
+
       - name: Executar script de atualização de JSON
         run: |
           export PYTHONPATH=$(pwd)/temp-scripts
@@ -90,24 +112,31 @@ jobs:
 
       - name: Debug - Verificar ficheiros após script
         run: |
-          echo "=== Ficheiros criados pelo script ==="
+          echo "=== Ficheiros criados/atualizados pelo script ==="
           ls -la articles/
           echo "=== Conteúdo do original_categories.json (se existir) ==="
           if [ -f "articles/original_categories.json" ]; then
             echo "Ficheiro existe!"
-            cat articles/original_categories.json | head -20
-            echo "=== Formato do ficheiro ==="
+            echo "=== Tamanho do ficheiro ==="
+            wc -l articles/original_categories.json
+            echo "=== Primeiras linhas ==="
+            head -20 articles/original_categories.json
+            echo "=== Formato e estatísticas do ficheiro ==="
             python -c "
-            import json
-            with open('articles/original_categories.json', 'r') as f:
-                data = json.load(f)
-                print('Type:', type(data))
-                print('Length:', len(data) if isinstance(data, list) else 'N/A')
-                print('First few entries:', data[:2] if isinstance(data, list) and len(data) > 0 else 'Empty or not a list')
-            "
+import json
+with open('articles/original_categories.json', 'r') as f:
+    data = json.load(f)
+    print('Type:', type(data))
+    print('Length:', len(data) if isinstance(data, list) else 'N/A')
+    if isinstance(data, list) and len(data) > 0:
+        print('First entry:', data[0])
+        print('Last entry:', data[-1])
+    else:
+        print('Empty or not a list')
+"
           else
             echo "Ficheiro NÃO existe!"
-          fi    
+          fi
 
       - name: Garantir pasta public e copiar JSONs
         run: |
@@ -118,6 +147,12 @@ jobs:
         run: |
           echo "# Branch Data - Ficheiros JSON" > README.md
           echo "Atualizado automaticamente em: $(date '+%Y-%m-%d %H:%M:%S')" >> README.md
+          echo "" >> README.md
+          echo "## Ficheiros disponíveis:" >> README.md
+          echo "- articles.json: Todas as notícias" >> README.md
+          echo "- articles_priority.json: Notícias prioritárias" >> README.md
+          echo "- articles_secondary.json: Notícias secundárias" >> README.md
+          echo "- original_categories.json: Categorias originais com contadores (preservado entre execuções)" >> README.md
 
       - name: Commit e Push para branch `data`
         run: |
